# mechanics-config

./: CHANGELOG.md  Cargo.toml  README.md
src/: config.rs  headers.rs  lib.rs  query.rs  retry.rs  template.rs
src/endpoint/: mod.rs  validate.rs
src/tests/: headers.rs  mod.rs  query.rs  resilience.rs  serde_config.rs  template.rs
