[package]
name = "mechanics-config"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/mechanics-config"
description = "Boa-free schema types (MechanicsConfig, HttpEndpoint) shared between mechanics-core and the Philharmonic connector lowerer."

[dependencies]


[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
