[package]
name = "mechanics-config"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/mechanics-config"
description = "Boa-free schema types (MechanicsConfig, HttpEndpoint) shared between mechanics-core and the Philharmonic connector lowerer."
keywords = ["automation", "orchestration", "config", "schema", "http"]
categories = ["config", "api-bindings"]

[dependencies]
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.7"
