[package]
name = "mechanics-config"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/mechanics-config"
description = "Boa-free schema types (MechanicsConfig, HttpEndpoint) shared between mechanics-core and the Philharmonic connector lowerer."
keywords = ["automation", "orchestration", "config", "schema", "http"]
categories = ["config", "api-bindings"]

[dependencies]
http = { version = "1.3.1", default-features = false, features = ["std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
url = { version = "2.5.7", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
